# badbaby

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  GPATH  GRTAGS  GTAGS  README.md  bootstrap.sh  plan.md  run-painter.sh  run-sub3000.sh  sub3000.bat  sub3000.sh
.github/workflows/: codeql-analysis.yml
core/: CMakeLists.txt
core/actor/: CMakeLists.txt
core/actor/include/: actor.hpp  mailbox.hpp  msg.hpp  role.hpp  worker.hpp
core/actor/src/: actor.cpp  mailbox.cpp  msg.cpp  role.cpp  worker.cpp
core/common/: CMakeLists.txt
core/common/include/: common.hpp  deci.hpp  image.hpp  monfs.hpp  print.hpp  utf8.hpp
core/common/src/: common.cpp  deci.cpp  image.cpp  monfs.cpp  targa.cpp  thread.cpp  utf8.cpp
core/common/src/mac/: monfs.cpp
core/common/src/win/: getopt.cpp  monfs.cpp  vasprintf.cpp
core/config/: CMakeLists.txt
core/config/include/: bson.hpp  config.hpp  elemInfo.hpp  token.h  value.hpp
core/config/src/: bson.cpp  config.cpp  config.lex  value.cpp
core/render/: CMakeLists.txt
core/render/contrib/: CMakeLists.txt
core/render/contrib/glad/: prepare.sh
core/render/include/: algebra.hpp  camera.hpp  context.hpp  font.hpp  frameTimer.hpp  framebuffer.hpp  shader.hpp  text.hpp  texture.hpp  ubo.hpp  vao.hpp
core/render/src/: camera.cpp  context.cpp  font.cpp  framebuffer.cpp  shader.cpp  text.cpp  texture.cpp  ubo.cpp  vao.cpp
core/util/: CMakeLists.txt
core/util/effects/: CMakeLists.txt
core/util/effects/include/: blur.hpp
core/util/effects/src/: blur.cpp
core/util/script/: CMakeLists.txt
core/util/script/include/: script.hpp
core/util/script/src/: script.cpp
core/util/shapes/: CMakeLists.txt
core/util/shapes/include/: indexBuffer.hpp  meshDesc.hpp  shapes.hpp  text.hpp  vecfont.hpp  vertexBuffer.hpp
core/util/shapes/src/: circle.cpp  indexBuffer.cpp  lines.cpp  meshDesc.cpp  numbers.cpp  planes.cpp  shapes.cpp  text.cpp  tristrip.cpp  vecfont.cpp  vertexBuffer.cpp
core/util/simplex/: CMakeLists.txt
core/util/simplex/include/: simplex.hpp
core/util/simplex/src/: simplex.cpp
cqc/: CMakeLists.txt
cqc/src/: cqc.cpp
extra/: CMakeLists.txt
extra/EditBSON/: .project  BuildEditBSON.xml
extra/EditBSON/src/de/javagl/treetable/: JTreeTable.java
extra/EditBSON/src/space/deci/bson/: BSONDocument.java  BSONElement.java  BSONIterator.java  CommonUtils.java  DOMDocument.java  DOMElement.java  DOMNumber.java  DOMString.java  DataType.java  Document.java  Element.java  LEDataInputStream.java  SAXElement.java  (+6 more)
extra/binstore/: CMakeLists.txt
extra/binstore/include/: binstore.hpp
extra/binstore/src/: binstore.cpp
extra/mapgen/: CMakeLists.txt
extra/mapgen/include/: distanceMap.hpp  heightMap.hpp  mapGen.hpp
extra/mapgen/src/: distanceMap.cpp  heightMap.cpp  mapGen.cpp
magic.revolver/: CMakeLists.txt
magic.revolver/include/: tacgame.hpp
magic.revolver/src/: tacgame.cpp  tacmenu.cpp  tacwar.cpp
obj2mesh/: CMakeLists.txt
obj2mesh/include/: getline.hpp
obj2mesh/src/: getline.cpp  obj2mesh.cpp
orthofight/: CMakeLists.txt
orthofight/src/: entry.cpp
painter/: CMakeLists.txt  format.md
painter/include/: painter.hpp
painter/src/: painter.cpp
runtime/: 001render_fp.glsl  001render_vp.glsl  003font_fp.glsl  003font_vp.glsl  004camera_fp.glsl  004camera_vp.glsl  005splash_fp.glsl  006simplex_fp.glsl  006simplex_vp.glsl  EditBSON.sh  default.config  example000.bson  grid.config  grid.tga  mono.config  mono.sdf.tga  splash.tga
runtime/cqc/: radar.fp.glsl  radar.vp.glsl
runtime/magrev/: background.ase  background.aseprite  background.tga  david.ase  david1.tga  david2.tga  default.config  floor.ase  floor.tga  map.txt  sprite.fp.glsl
runtime/obj2mesh/: default.config  green.mtl  green.obj.msh  obj2mesh.fp.glsl  obj2mesh.vp.glsl
runtime/orthofight/: default.config  obj2mesh.fp.glsl  obj2mesh.vp.glsl  world.fp.glsl  world.vp.glsl
runtime/painter/: alphabet.pvf  alphabet.pvf.msh  test.pvf  test.pvf.msh  test.pvf.win.msh
runtime/starrg/: default.config  font.config  font.fp.glsl  font.vp.glsl  starrg.fp.glsl  starrg.vp.glsl  tiles.config  tiles.tga
runtime/sub3000/: arena.config  arena.fp.glsl  arena.vp.glsl  authors.config  default.config  demo.fp.glsl  demo.vp.glsl  desktop.fp.glsl  hmap-debug.fp.glsl  hmap-debug.fp.glsl.bak  hmap-debug.vp.glsl  level.config  logo.config  logo_splash_fp.glsl  logo_splash_vp.glsl  lorem.ipsum  mainMenu.config  mainMenu_fp.glsl  mainMenu_vp.glsl  radar-2.fp.glsl  radar-2.vp.glsl  radar.cyr.msh  radar.fp.glsl  radar.msh  radar.vp.glsl
runtime/tacwar/: basic.tga  default.config  level.txt  sprite.fp.glsl  sprite.vp.glsl
runtime/tests/: 001render_fp.glsl  004camera_fp.glsl  004camera_vp.glsl  005splash_vp.glsl  006simplex.config  006simplex_fp.glsl  auto.fp.glsl  auto.vp.glsl  default.config  mono.config  mono.tga  sample.config  test.bson  to_sdf.sh
sound/: CMakeLists.txt
sound/include/: sound.hpp
sound/src/: sound.cpp
star.rg/: CMakeLists.txt
star.rg/include/: components.hpp  ecs.hpp  starrg.hpp  tileDB.hpp  world.hpp
star.rg/src/: ecs.cpp  entry.cpp  starrg.cpp  tileDB.cpp  world.cpp
sub3000/: CMakeLists.txt
sub3000/include/: actionTable.hpp  arena.hpp  authors.hpp  control.hpp  demo.hpp  enumLoop.hpp  mainMenu.hpp  mapGen.hpp  player.hpp  scene.hpp  screen_t.hpp  space.hpp  splash.hpp  state_t.hpp  status_t.hpp  sub3000.hpp
sub3000/src/: actionTable.cpp  arena.cpp  authors.cpp  mainMenu.cpp  mapGen.cpp  scene.cpp  space.cpp  splash.cpp  sub3000.cpp
sub3000/src/arena/: screen_t.cpp  status_t.cpp
sub3000/src/scenes/: arena.cpp  authors.cpp  demo.cpp  mainMenu.cpp  splash.cpp
sub3000/src/scenes/arena/: player.cpp  screen_t.cpp  space.cpp  status_t.cpp
tac.war/: CMakeLists.txt
tac.war/include/: tacgame.hpp  tacmenu.hpp  tacwar.hpp
tac.war/src/: tacgame.cpp  tacmenu.cpp  tacwar.cpp
tests/: CMakeLists.txt
tests/src/: 000hello.cpp  001render.cpp  002config.cpp  003font.cpp  004camera.cpp  005splash.cpp  006simplex.cpp  007menu.cpp  008bson.cpp  008script.cpp  009field.cpp  010bin.cpp  011automata.cpp  012deci.cpp
(+5 files in other folders)
